#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package LogBook
#------------------------------------------------------------------------

Package author: Igor Gaponenko

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-07
2015-06-22 Mikhail Dubrovin
- LogBookGrabber_qt - use default url parameter, fix usage for -h option (PSAS-70)

Tag: V01-00-06
2015-06-15 Mikhail Dubrovin
- LogBookGrabber_qt - is added to this package, add files:
	app/LogBookGrabber_qt
	src/LogBookWebService.py
	doc/README-LogBookGrabber_qt
- in LogBookGrabber_qt - add features requested by Silke (PSAS-70)

Tag: V01-00-05
2015-04-16 Igor Gaponenko
- finalized DAQ detectors migration (PSDH-25, PSWA-37)
- extended the new message posting service to allow posting a vopy of
a message into a special SDS ("Sample Delivery System" e-log (PSWA-46)

Tag: V01-00-04
2015-03-10 Igor Gaponenko
- added support for new class of run attributes 'DAQ Detetector Status',
migration of the 'DAQ_Detectors' class to 'DAQ Detectors' (PSWA-37)

Tag: V01-00-03
2014-12-08 Igor Gaponenko
- server-side implementation for e-Log message forwarding
as per JIRA PSWA-19

Tag: V01-00-02
2014-11-03 Igor Gaponenko
- minor fix in the URL for e-log notifications

Tag: V01-00-01
2014-10-10 Igor Gaponenko
- added Web services run_begin and run_end as per JIRA ticket PSWA-5
- made required modificatons to the PHP classes
- extended Web service message_new to support posting a copy of a message into
an instrument e-log if requested by a client.The feature is now enabled in the
Web UI

Tag: V01-00-00
2014-04-30 Igor Gaponenko
- major package cleanup: removed the old LogBook Web application
- major refactoring and renaming of the Web services to the new PHP framework

Tag: V00-03-18
2014-03-17 Igor Gaponenko